--- a/2D/2D.vcxproj.filters
+++ b/2D/2D.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Source\Framebuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\MathUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
