--- a/2D/2D.vcxproj.filters
+++ b/2D/2D.vcxproj.filters
@@ -113,5 +113,8 @@
     <ClInclude Include="Source\FragmentShader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
