--- a/2D/2D.vcxproj
+++ b/2D/2D.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="Source\Framebuffer.h" />
     <ClInclude Include="Source\Image.h" />
     <ClInclude Include="Source\Input.h" />
+    <ClInclude Include="Source\Light.h" />
     <ClInclude Include="Source\MathUtils.h" />
     <ClInclude Include="Source\Model.h" />
     <ClInclude Include="Source\PostProcess.h" />
